GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/MC_Emails_Sent__c.object-meta.xml
<CustomObject>
    <label>MC Emails Sent</label>
    <nameField>
        <label>MC Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Emails Sent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>