GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Booker__c.field-meta.xml
<CustomField>
    <fullName>Booker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MC Emails Sent</relationshipLabel>
    <relationshipName>MC_Emails_Sent1</relationshipName>
    <type>Lookup</type>
</CustomField>