GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Classifications__c.field-meta.xml
<CustomField>
    <fullName>Classifications__c</fullName>
    <label>Classifications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disruption</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>