GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Clicked__c.field-meta.xml
<CustomField>
    <fullName>Clicked__c</fullName>
    <label>Clicked</label>
    <type>DateTime</type>
</CustomField>