GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <externalId>true</externalId>
    <label>Email Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>