GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/MC_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>MC_Email_Subject__c</fullName>
    <label>MC Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>