GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <label>Opened</label>
    <type>DateTime</type>
</CustomField>