GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
                <default>true</default>
                <label>Sent</label>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>