GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>