GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipLabel>MC Emails Sent</relationshipLabel>
    <relationshipName>MC_Emails_Sent1</relationshipName>
    <type>Lookup</type>
</CustomField>