GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact_Email__c</columns>
    <columns>Classifications__c</columns>
    <columns>Booker__c</columns>
    <columns>Ticket__c</columns>
    <columns>Train__c</columns>
    <columns>Sent_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>