GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/listViews/check.listView-meta.xml
<ListView>
    <fullName>check</fullName>
    <columns>NAME</columns>
    <columns>Contact_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Email__c</field>
        <operation>equals</operation>
        <value>n.a.moossavi@gmail.com</value>
    </filters>
    <label>GDPR check</label>
    <language>en_US</language>
    <sharedTo>
        <group>Salesforce_Support_Team</group>
    </sharedTo>
</ListView>