GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/listViews/Marketing_emails_this_week.listView-meta.xml
<ListView>
    <fullName>Marketing_emails_this_week</fullName>
    <columns>NAME</columns>
    <columns>Sent_Date__c</columns>
    <columns>Booker__c</columns>
    <columns>Ticket__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Classifications__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Sent_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Marketing emails this week</label>
    <language>en_US</language>
</ListView>