GearsetPOC/force-app/main/default/objects/MC_Emails_Sent__c/listViews/Transactional_emails_sent_Last_week.listView-meta.xml
<ListView>
    <fullName>Transactional_emails_sent_Last_week</fullName>
    <columns>NAME</columns>
    <columns>Classifications__c</columns>
    <columns>Sent_Date__c</columns>
    <columns>Booker__c</columns>
    <columns>Contact_Email__c</columns>
    <columns>Ticket__c</columns>
    <columns>Train__c</columns>
    <columns>Opened__c</columns>
    <columns>Clicked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sent_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>Classifications__c</field>
        <operation>equals</operation>
        <value>Transactional</value>
    </filters>
    <label>Transactional emails sent Last week</label>
    <language>en_US</language>
</ListView>